tests/reference/run-scalar_allocation_check_07-eaa53b1.stderr
runtime error: Argument 1 is unallocated.
 --> tests/errors/scalar_allocation_check_07.f90:5:14
  |
5 |     print *, s
  |              ^ This is unallocated
